<resources>
    <string name="app_name">Carrify</string>
    <string name="google_maps_key">AIzaSyAXia9JqD28RTvd1XvI8upS_GUB86ErQP4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Log in</string>
    <string name="no_wallet_history">Unfortunately, you do not have any operations on wallet.</string>
    <string name="no_coupons_history">Unfortunately, you do not have any used coupons.</string>
    <string name="enter_phone_to_login">Enter your phone number and rent the first car!</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="found_no_acc">It looks like you do not have an account, create one to use Carrify!</string>
    <string name="email_address">E-mail address</string>
    <string name="personal_number">Personal number</string>
    <string name="register">Register</string>
    <string name="email_in_use">Email address already in use.</string>
    <string name="personal_number_in_use">Personal number already in use.</string>
    <string name="wrong_phone_number">Phone number must have 9 digits.</string>
    <string name="wrong_personal_number">Personal number must have 11 digits.</string>
    <string name="wrong_email_address">Email must be valid.</string>
    <string name="wrong_password">Password must have min 8 length, special sign, digits and capital letter.</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="phone_success">We got it! Now please enter your password!</string>
    <string name="login_success">Login Successful!</string>
    <string name="register_success">Register successful! You will be moved to the Application!</string>
    <string name="rent">Rent</string>
    <string name="rent_successful">You rented car successfully!</string>
    <string name="reservation_successful">You reserved car successfully!</string>
    <string name="time_of_rent">Time of rent:</string>
    <string name="distance">Distance:</string>
    <string name="park">Park</string>
    <string name="click_orange_background">Click orange background to see details of this rent...</string>
    <string name="registration_number">Registration number</string>
    <string name="car_name">Car name</string>
    <string name="history_of_rents">History of rents</string>
    <string name="driver_license_validation">Driver license validation</string>
    <string name="driver_license_description1">Take two photos of your driver license, first take photo of your front page. Below is example of the photo.</string>
    <string name="driver_license_description2">Excellent, we got front page! Now, it is time to take photo of reverse page. Below is example of the photo.</string>
    <string name="take_photo_front_page">Take photo of front page</string>
    <string name="take_photo_reverse_page">Take photo of reverse page</string>
    <string name="understood">Understood</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="add_money">Top Up Wallet</string>
    <string name="wallet">Wallet</string>
    <string name="current_balance">Current balance</string>
    <string name="upload">Upload</string>
    <string name="card">Card</string>
    <string name="empty_balance">0,00 PLN</string>
    <string name="history">History</string>
    <string name="updated_wallet">Your wallet have been topped up successfully!</string>
    <string name="coupon_used_success">Coupon used successfully!</string>
    <string name="wrong_amount">Wrong amount, please try again…!</string>
    <string name="wrong_code">You need to enter code…</string>
    <string name="enter_amount">Enter amount to top up…</string>
    <string name="enter_coupon">Enter coupon code</string>
    <string name="top_up">Top up</string>
    <string name="use">Use</string>
    <string name="cancel">Cancel</string>
    <string name="driver_license_warning">We detected that you have not uploaded your driver license. In order to rent a car, you need to upload photos of it. Click "Upload" below to take photos.</string>
    <string name="reservation">Reservation</string>
</resources>
