<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <TextView
        android:id="@+id/textView25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/nineteenth"
        android:gravity="center"
        android:text="@string/enter_phone_to_login"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineH42" />

    <EditText
        android:id="@+id/loginPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/grey_circle_edittext"
        android:ems="10"
        android:fontFamily="@font/nineteenth"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH8"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV80"
        app:layout_constraintStart_toStartOf="@+id/guidelineV20"
        app:layout_constraintTop_toTopOf="@+id/guidelineH7" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/grey_circle_edittext"
        android:ems="10"
        android:fontFamily="@font/nineteenth"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH10"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV80"
        app:layout_constraintStart_toStartOf="@+id/guidelineV20"
        app:layout_constraintTop_toTopOf="@+id/guidelineH9" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH20"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV80"
        app:layout_constraintStart_toStartOf="@+id/guidelineV20"
        app:layout_constraintTop_toTopOf="@+id/guidelineH05"
        app:srcCompat="@drawable/carrify_logo" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nineteenth"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH40"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV80"
        app:layout_constraintStart_toStartOf="@+id/guidelineV20"
        app:layout_constraintTop_toTopOf="@+id/guidelineH33" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.7"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nineteenth"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV80"
        app:layout_constraintStart_toStartOf="@+id/guidelineV20"
        app:layout_constraintTop_toTopOf="@+id/guidelineH12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>