<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/useCouponBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nineteenth"
        android:gravity="center"
        android:text="@string/use"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/text_size_18sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v3"
        app:layout_constraintTop_toBottomOf="@+id/couponCodeTxtLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelCouponBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nineteenth"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/text_size_18sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintStart_toStartOf="@+id/guideline_v"
        app:layout_constraintTop_toBottomOf="@+id/couponCodeTxtLayout" />

    <ImageView
        android:id="@+id/imageViewLogo2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carrify_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/couponCodeTxtLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_coupon"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/couponCodeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nineteenth"
            android:gravity="center"
            android:inputType="text"
            android:textSize="@dimen/text_size_15sp" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>